--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "battlefrontapi1914",
   "version": "1.0.0",
   "description": "API wrapper for Supremacy 1914",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "app": "node dist/app.js",
+    "lint": "npx eslint src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +16,14 @@
     "axios": "^1.7.9"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/axios": "^0.9.36",
     "@types/node": "^22.10.5",
-    "typescript": "^5.7.2"
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.1"
   }
 }
