--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "js-sha1": "^0.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
