Rename from BattlefrontAPI1914 to BattlefrontAPI due to it not only working with s1914

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "battlefrontapi1914",
+  "name": "battlefrontapi",
   "version": "1.0.0",
-  "description": "API wrapper for Supremacy 1914",
+  "description": "API wrapper for Bytro games (Supremacy 1914, Call of War and Iron Order).",
   "main": "dist/app.js",
   "scripts": {
     "test": "node tests/index.js",
