--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "repository": "github:MarcZX100/BytroFront",
+  "homepage": "https://marczx100.github.io/BytroFront/",
   "files": [
     "dist"
   ],
