--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bytrofront",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Unofficial API wrapper for Bytro games (Supremacy 1914, Call of War and Iron Order).",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -34,13 +34,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
-    "js-sha1": "^0.7.0"
+    "js-sha1": "^0.7.0",
+    "jsdom": "^26.0.0",
+    "puppeteer": "^24.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.14",
     "@types/js-sha1": "^0.6.3",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
